--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@luciana001/holidates",
+  "name": "@luciana001/holidate",
   "version": "1.0.1",
   "description": "",
   "main": "index.js",
